<resources>
    <string name="app_name">Kingsfinances</string>
    <string name="action_settings">Settings</string>
    <string name="finance">Finanzen</string>
    <string name="owning">Eigentum</string>
    <string name="cleanPlanner">Putzplan</string>
    <string name="options">Einstellungen</string>
    <string name="items">Ausgaben</string>
    <string name="costs">Kosten</string>
    <string name="name">Name</string>
    <string name="firstDate">Erste Ausführung</string>
    <string name="date">Datum</string>
    <string name="category">Kategorie</string>
    <string name="once">Einmalig</string>
    <string name="monthly">Monatlich</string>
    <string name="day">Tag</string>
    <string name="yearly">Jährlich</string>
    <string name="all">Alle</string>
    <string name="other">Sonstiges</string>
    <string name="living">Wohnen</string>
    <string name="household">Haushalt</string>
    <string name="spareTime">Freizeit</string>
    <string name="job">Arbeit</string>
    <string name="transportation">Verkehrsmittel</string>
    <string name="share_costs">Kosten teilen</string>
    <string name="ok">OK</string>

    <string name="who">Person</string>
    <string name="frequency">Häufigkeit</string>
    <string name="confirm_delete">Wollen Sie diesen Eintrag %1$s wirklich löschen?</string>
    <string name="yes">Ja</string>
    <string name="no">Nein</string>
    <string name="cancel">Abbrechen</string>
    <string name="short_delete">Entf</string>
    <string name="time_frame">Zeitraum</string>
    <string name="overall">Gesamt</string>
    <string name="last_month">Letzter Monat</string>
    <string name="last_year">Letztes Jahr</string>
    <string name="average_month">Durchschnitt Monat</string>
    <string name="debts">Schulden</string>
    <string name="this_month">Diesen Monat</string>
    <string name="this_year">Dieses Jahr</string>
    <string name="winnings">Gewinn</string>
    <string name="error_db_import">Fehler beim Importieren der Datenbank</string>
    <string name="success_db_import">Datenbank wurde erfolgreich importiert</string>
    <string name="success_db_export">Datenbank wurde erfolgreich exportiert</string>
    <string name="error_db_export">Fehler beim Exportieren der Datenbank</string>
    <string name="action_backup">Sicherung</string>
    <string name="action_import">Importieren</string>
    <string name="choose_import_file">Wähle die Datei zum importieren aus</string>
    <string name="enter_pin">Geben Sie Ihren PIN ein</string>
    <string name="demo">Demo</string>
    <string name="wrong_pin">Falscher Pin</string>
    <string name="error_costs">Fehler bei den Kosten</string>
    <string name="executor">Ausführender</string>
    <string name="user">Nutzer</string>

    <string name="confirm_standing_order_and_entrys_delete">Wollen Sie diesen und alle folgenden Einträge des Dauerauftrages %1$s löschen?</string>
    <string name="number">Anzahl</string>
    <string name="delete_only_this">Nur diesen Eintrag %1$s löschen</string>
    <string name="standing_order">Dauerauftrag</string>
    <string name="last_date">Letzte Ausführung</string>
    <string name="save">Speichern</string>
    <string name="income">Einkommen</string>
    <string name="question_executor_costs">Wer hat bezahlt?</string>
    <string name="question_executor_income">Wer hat das Geld erhalten?</string>
    <string name="question_user_costs">Wer sollte zahlen?</string>
    <string name="question_user_income">Wer sollte das Geld erhalten?</string>
    <string name="weekly">Wöchentlich</string>
    <string name="transaction_name">Transaktion Name</string>

    <string name="change_standing_order">Dauerauftrag ändern</string>
    <string name="change_only_entry">Nur diesen Eintrag ändern</string>
    <string name="confirm_standing_order_delete">Wollen Sie diesen Dauerauftrag wirklich löschen?</string>
    <string name="fixed_costs">Fixe Kosten</string>
    <string name="finance_file_key">finance_file_key</string>
    <string name="category_already_exists">Kategorie existiert bereits</string>
    <string name="question_delete_category">Möchten Sie diese Kategorie löschen?</string>
    <string name="owners">Besitzer</string>
    <string name="last_update">Letztes Update</string>
    <string name="confirm_delete_bank_account">Wollen Sie das Konto %1$s wirklich löschen?</string>
    <string name="bank_account">Konto</string>
    <string name="bank">Bank</string>
    <string name="monthly_costs">Monatliche Kosten</string>
    <string name="empty_not_allowed">Feld darf nicht leer sein</string>
    <string name="interest">Zinsen</string>
    <string name="question_owner_bank_account">Wer ist Eigentümer des Kontos</string>
    <string name="balance">Kontostand</string>
    <string name="account_name">Konto Name</string>
    <string name="ownings">Vermögen</string>
    <string name="close">schließen</string>
    <string name="short_owner">Bes</string>
    <string name="ownings_last_month">Vermögen letzter Monat</string>
    <string name="compensation">Ausgleich</string>
    <string name="misc">Sonstiges</string>
    <string name="action_sync">Synchronisieren</string>
    <string name="conflict">Konflikt</string>
    <string name="which_conflicted">Welchen Eintrag möchtest du übernehmen?</string>
    <string name="not_authorized_for_sync">Synchronisierung fehlgeschlagen: Nicht authorisiert</string>
    <string name="action_clean">Säubern</string>
    <string name="statistics">Statistiken</string>
    <string name="filter">Filter</string>
    <string name="delete_filter">Filter löschen</string>
    <string name="january">Januar</string>
    <string name="action_filter">Filter</string>
    <string name="error_logfile_creation">Fehler beim erstellen des logfiles</string>
    <string name="action_logfile">Show Log</string>
    <string name="logfile">Log</string>
    <string name="OK">OK</string>
    <string name="backup_exp_title">Backup</string>
    <string name="backup_exp">Um die Backup Funktion nutzen zu können, muss die Berechtigung \"Speicher\" zugelassen sein.</string>
    <string name="action_check_date">Abgleichdatum setzen</string>
    <string name="getExpensesFail">Fehler beim Anfordern der Buchführung</string>
    <string name="person">Person</string>
    <string name="real">Real</string>
    <string name="theory">Theoretisch</string>
    <string name="invalid_entry">Ungültige Eingabe</string>
    <string name="may_not_be_empty">Darf nicht leer sein</string>
    <string name="wrong_format_use_point_as_separator">Falsches Format. Benutze . als Trennzeichen.</string>
    <string name="invalid_choice">Ungültige Auswahl</string>
    <string name="invalid_costs">Ungültige Kosten</string>
    <string name="add">Hinzufügen</string>
    <string name="test">Test</string>
    <string name="pending">Ausgang</string>
    <string name="navigation_drawer_open">Öffne Navigation</string>
    <string name="navigation_drawer_close">Schließe Navigation</string>
    <string name="operation">Operation</string>
    <string name="status">Status</string>
    <string name="expenses">Ausgaben</string>
    <string name="last_execution">Letzte Ausführung</string>
    <string name="daily">täglich</string>
    <string name="owner">Besitzer</string>
    <string name="bank_name">Bank Name</string>
    <string name="debts_of">Schulden von %s</string>
    <string name="monthly_win">Monatl. Gewinn</string>
    <string name="saving_rate">Sparrate</string>
    <string name="future">Zukunft</string>
    <string name="year">Jahr</string>
    <string name="month">Monat</string>
    <string name="goal">Ziel</string>
    <string name="menu_refresh">Aktualisieren</string>
    <string name="update_available">Updates verfügbar</string>
    <string name="compensation_category">Ausgleich</string>
</resources>
