<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <TextView
        android:id="@+id/text_name"
        style="@style/LinearLayoutNormalText"

        android:text="@string/name"
        />

    <TextView
        android:id="@+id/text_costs"
        style="@style/LinearLayoutNormalText"
        android:text="€"
        />

    <LinearLayout android:orientation="horizontal"
        android:id="@+id/persons_container"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        ></LinearLayout>

    <TextView
        android:id="@+id/text_category"
        style="@style/LinearLayoutNormalText"
        android:text="@string/category"

        android:visibility="gone"/>



    <TextView
        android:id="@+id/text_date"
        android:layout_height="wrap_content"
        android:layout_width="@dimen/day_width"
        android:text="@string/date"
        />


</merge>